Prevent invisible overlay from messing with mouse

--- a/styles/kite-signature.less
+++ b/styles/kite-signature.less
@@ -8,7 +8,7 @@ kite-signature {
   font-family: @font-family;
   max-width: 30em;
   min-width: 20em;
-
+  position: absolute;
   transform: translate(0, calc(-100% - 16px));
 
   &.upside-down {
